@@ -221,3 +221,7 @@ Default method invocation in Dynamic Classic objects
 Support for calling native methods on DynamicObject, DynamicClassicObject
 New examples with default method: DefaultMethodProxy.ajs, DefaultMethodLoadBalancer.ajs
 New example with agents: AgentChain.ajs
+
+2010-02-15
+.. and ... operators in Lexer
+New example with agents: AgentCollatz.ajs
